--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -38,6 +38,12 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
+  application:
+    name: pssmall-admin
+  cloud:
+    nacos:
+      config:
+        server-addr: localhost:8848
 #  resources:
 #    add-mappings: false
 
