--- a/pssmall-gateway/src/main/resources/application.yml
+++ b/pssmall-gateway/src/main/resources/application.yml
@@ -2,6 +2,18 @@ spring:
   cloud:
     gateway:
       routes:
+        - id: product_route
+          uri: lb://pssmall-product
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/(?<segment>/?.*), /$\{segment}
+        - id: third_party_route
+          uri: lb://pssmall-third-party
+          predicates:
+            - Path=/api/thirdparty/**
+          filters:
+            - RewritePath=/api/thirdparty/(?<segment>/?.*), /$\{segment}
         - id: admin_route
           uri: lb://pssmall-admin
           predicates:
