--- a/pssmall-product/src/main/resources/application.yml
+++ b/pssmall-product/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
   redis:
     host: 8.129.122.40
     port: 6379
+    password: 77777777
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
