--- a/pssmall-product/pom.xml
+++ b/pssmall-product/pom.xml
@@ -53,6 +53,15 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.15.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.blackball.pssmall</groupId>
             <artifactId>pssmall-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
