--- a/pssmall-order/src/main/resources/application.yml
+++ b/pssmall-order/src/main/resources/application.yml
@@ -4,16 +4,34 @@ spring:
     password: 123456
     url: jdbc:mysql://8.129.122.40:3306/pssmall_oms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  rabbitmq:
+    host: 8.129.122.40
+    port: 5672
+    virtual-host: /
+    username: admin
+    password: 77777777
+    publisher-confirm-type: correlated
+    publisher-returns: true
+    template:
+      mandatory: true
+    listener:
+      simple:
+        acknowledge-mode: manual
+
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+
   application:
     name: pssmall-order
+
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+
 server:
   port: 8300
